Fixed an issue with about page responsiveness on mobile. Reduced text in bio, corrected current link to highlight about, and fixed h1 hidding behind hamburger button

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -15,45 +15,6 @@
 // Tablets & Small Laptops
 @include mediaMd {
 
-  // .menu-nav,
-  // div.menu-branding {
-  //   float: none;
-  //   width: 100%;
-  //   min-height: 0;
-
-  //   &.show {
-  //     transform: translate3d(0, 0, 0);
-  //   }
-  // }
-
-  // .menu-nav {
-  //   height: 75vh;
-  //   transform: translate3d(-100%, 0, 0);
-  //   font-size: 24px;
-  // }
-
-  // .menu-branding {
-  //   height: 25vh;
-  //   transform: translate3d(100%, 0, 0);
-
-  //   .portrait {
-  //     background: url("../../img/profile-sm.png");
-  //     width: 150px;
-  //     height: 150px;
-  //   }
-  // }
-
-  .about-info {
-    grid-template-areas:
-      "bioimage"
-      "bio"
-      "job1"
-      "job2"
-      "job3";
-
-    grid-template-columns: 1fr;
-  }
-
   .projects {
     grid-template-columns: repeat(2, 1fr);
   }
